@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2005/10/08 16:05:48 jdolecek Exp $
+# $NetBSD: Makefile,v 1.12 2005/10/08 16:49:35 jdolecek Exp $
 
 DISTNAME=	php-extensions-5.0
-PKGREVISION=	7
+PKGREVISION=	8
 CATEGORIES=	meta-pkgs www php5
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -38,7 +38,6 @@ DEPENDS+=	php-mhash-5.0.*:../../security/php-mhash
 DEPENDS+=	php-mssql-5.0.*:../../databases/php-mssql
 DEPENDS+=	php-mysql-5.0.*:../../databases/php-mysql
 DEPENDS+=	php-odbc-5.0.*:../../databases/php-odbc
-DEPENDS+=	php-openssl-5.0.*:../../security/php-openssl
 DEPENDS+=	php-pcntl-5.0.*:../../devel/php-pcntl
 DEPENDS+=	php-pdflib-5.0.*:../../print/php-pdflib
 DEPENDS+=	php-pgsql-5.0.*:../../databases/php-pgsql
