@@ -1,20 +1,0 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:47:17 tv Exp $
-
-MODNAME=		openssl
-CATEGORIES+=		security
-PKGREVISION=		# empty
-COMMENT=		PHP extension for the OpenSSL library
-
-
-CONFIGURE_ARGS+=	--with-${MODNAME}=shared,${BUILDLINK_PREFIX.openssl}
-
-# the config test for -lssl fails to link in -lcrypto; just force it
-# to succeed
-CONFIGURE_ENV+=		ac_cv_lib_ssl_SSL_CTX_set_ssl_version=yes
-
-post-extract:
-	cd ${WRKSRC} && ln -s config0.m4 config.m4
-
-.include "../../lang/php/ext.mk"
-.include "../../security/openssl/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
